// https://dbdiagram.io/d
Table users {
  id char(36) [pk]
  created_at "DATETIME(6) DEFAULT NOW()"
  updated_at "DATETIME(6) DEFAULT NOW() ON UPDATE CURRENT_TIMESTAMP"
  google_id text [not null]
  role text
  name text
  Indexes {
    id
  }
}

Table articles {
  id char(36) [pk]
  created_at "DATETIME(6) DEFAULT NOW()"
  updated_at "DATETIME(6) DEFAULT NOW() ON UPDATE CURRENT_TIMESTAMP"
  user_id char(36) [ref: > users.id]
  title text
  body text
  public bool
  Indexes {
    id
  }
}
Table article_game_contents {
  id char(36) [pk, ref: - articles.id]
  created_at "DATETIME(6) DEFAULT NOW()"
  updated_at "DATETIME(6) DEFAULT NOW() ON UPDATE CURRENT_TIMESTAMP"
  exec_path text
  zip_url text
  Indexes {
    id
  }
}
Table article_owners {
  id char(36) [ref: > users.id]
  article_id char(36) [ref: > articles.id]
  Indexes {
    (id, article_id) [pk]
  }
}
Table article_tags {
  id char(36) [increment]
  article_id char(36) [ref: > articles.id]
  name text
  Indexes {
    (id, article_id) [pk]
  }
}
Table article_comments {
  id char(36) [increment]
  created_at "DATETIME(6) DEFAULT NOW()"
  updated_at "DATETIME(6) DEFAULT NOW() ON UPDATE CURRENT_TIMESTAMP"
  article_id char(36) [ref: > articles.id]
  body text
  rate int
  Indexes {
    (id, article_id) [pk]
  }
}
Table article_image_urls {
  id char(36) [increment]
  article_id char(36) [ref: > articles.id]
  image_url text
  Indexes {
    (id, article_id) [pk]
  }
}
